--- a/menu/index.html
+++ b/menu/index.html
@@ -198,13 +198,21 @@
                             <p>Manzo, scamorza affumicata, crema di funghi, speck croccante</p>
                         </li>
                         <li>
+                            <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate</p>
+                        </li>
+                        <li>
+                            <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, gorgonzola, guanciale, pomodorini confit</p>
+                        </li>
+                        <li>
                             <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, guanciale, pepe</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante</p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
