--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Fino al 24 Novembre siamo aperti solo per gli asporti. Per ritirare gli asporti è obbligatorio l'utilizzo della mascherina.</p>
+				<p>Siamo aperti solo per gli asporti. Per ritirare gli asporti è obbligatorio l'utilizzo della mascherina.</p>
 				<p>Colonnine con gel igienizzante sono dislocate all'entrata e nei pressi dell'area di ritiro dell'asporto.</p>
 				<!-- <p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
 				<p>Prestiamo tutte le attenzioni possibili all'emergenza sanitaria in corso con un insieme di regole che ci permetteranno di passare una serata rilassata e serena.</p>
@@ -128,7 +128,7 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
-				<p>Chiuso fino al 24 Novembre</p>
+				<p>Per ora chiuso. Speriamo di rivederci presto.</p>
 				<!-- <h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p> -->
                 <!-- <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
