--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
 				<p>Dal Venerdì alla Domenica<br>Dalle 19:00 alle 21:00</p>
+				<p>Siamo chiusi il 25, 26 Dicembre. <br>Aperti il 27 Dicembre, il 31 Dicembre e 1, 2, 3 Gennaio</p>
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
