--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
-				<p>Per ora chiuso. Speriamo di rivederci presto.</p>
+				<p>Per ora chiuso.</p>
 				<!-- <h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p> -->
                 <!-- <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
