--- a/menu/index.html
+++ b/menu/index.html
@@ -398,14 +398,14 @@
                                 <h3>Rosenheimer Marzen 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca 5,6% <br><em>Birrificio Flotzinger</em></p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>1447 Naturtrub 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca non filtrata 4,9% <br><em>Birrificio Zotler</em></p>
-                            </li> -->
-                            <!-- <li>
+                            </li>
+                            <li>
                                 <h3>Hellerbock 50cl <span class="price">6</span></h3>
                                 <p>Keller tedesca 6,5% <br><em>Birrificio Hirsch</em></p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
@@ -414,13 +414,17 @@
                                 <h3>Neuottinger Dunkel 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 5,3% <br><em>Birrificio Mullerbrau</em></p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Bockser 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 8,2% <br><em>Birrificio Mullerbrau</em></p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Dopplebock 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 7,2% <br><em>Birrificio Hirsch</em></p>
+                            </li>
+                            <li>
+                                <h3>Spezial Dunkel 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 5,3% <br><em>Birrificio Flotzinger</em></p>
                             </li>
                             <!-- <li>
                                 <h3>Antonator 50cl <span class="price">6</span></h3>
@@ -434,21 +438,25 @@
                                 <h3>Nonnukka 50cl <span class="price">6</span></h3>
                                 <p>Ale bionda 4,8% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Wanda 50cl <span class="price">6</span></h3>
                                 <p>Ipa 6,9% <br><em>Birrificio Mukkeller</em></p>
-                            </li>
-                            <!-- <li>
+                            </li> -->
+                            <li>
                                 <h3>Tulio 50cl <span class="price">6</span></h3>
                                 <p>Rye IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
-                            </li> -->
-                            <!-- <li>
+                            </li>
+                            <li>
                                 <h3>Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
-                            </li> -->
+                            </li>
                            <li>
                                 <h3>Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
+                            </li>
+                            <li>
+                                <h3>Nessuna Speranza 50cl <span class="price">6</span></h3>
+                                <p>Belgian IPA 7,5% <br><em>Birrificio Mukkeller</em></p>
                             </li>
                             <!-- <li>
                                 <h3>Schwarze Madonna 50cl <span class="price">6</span></h3>
