--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</div>
 	</header>
 <!-- fine header -->
-	<div class="panel-home-2n">
+	<!-- <div class="panel-home-2n">
 		<div class="row">
 			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
 				<h1>Covid</h1>
@@ -106,13 +106,13 @@
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<p>Siamo aperti solo per gli asporti. Per ritirare gli asporti è obbligatorio l'utilizzo della mascherina.</p>
 				<p>Colonnine con gel igienizzante sono dislocate all'entrata e nei pressi dell'area di ritiro dell'asporto.</p>
-				<!-- <p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
+				<p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
 				<p>Prestiamo tutte le attenzioni possibili all'emergenza sanitaria in corso con un insieme di regole che ci permetteranno di passare una serata rilassata e serena.</p>
 				<p>Per venire a Ca' Vecchia Beerstrot assicuriamoci di leggere e condividere il regolamento Covid</p>
-				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a> -->
+				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="panel-home-n">
 		<!-- <div class="row">
 			<div class="medium-12 large-12 columns panel clearfix">
@@ -138,7 +138,7 @@
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
 				<p>Dal Venerdì alla Domenica<br>Dalle 19:00 alle 21:00</p>
-				<p>Siamo chiusi il 25, 26 Dicembre. <br>Aperti il 27 Dicembre, il 31 Dicembre e 1, 2, 3 Gennaio</p>
+				<!-- <p>Siamo chiusi il 25, 26 Dicembre. <br>Aperti il 27 Dicembre, il 31 Dicembre e 1, 2, 3 Gennaio</p> -->
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
