--- a/menu/index.html
+++ b/menu/index.html
@@ -197,9 +197,13 @@
                             <h3>Autunno <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, scamorza affumicata, crema di funghi, speck croccante</p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate</p>
+                        </li> -->
+                        <li>
+                            <h3>Primavera <span class="price">9,5 / doppio 14,9</span></h3>
+                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia</p>
                         </li>
                         <li>
                             <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
