--- a/menu/index.html
+++ b/menu/index.html
@@ -293,7 +293,7 @@
                             </li>
                             <li>
                                 <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
-                                <p>Cantucci mi artigianali serviti con vino di visciole</p>
+                                <p>Cantucci artigianali serviti con vino di visciole</p>
                             </li>
                         </ul>
                         <br>
