--- a/menu/index.html
+++ b/menu/index.html
@@ -114,15 +114,12 @@
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+                    <h2 class="subheader">Per Stuzzicare - Fritti</h2>
+
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
                             <p>Serviti con salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
-                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
                             <h3>Olive all'Ascolana <span class="price">5,5</span></h3>
@@ -130,20 +127,48 @@
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte <span class="price">5,9</span></h3>
-                            <p>Servite con salsa aioli fatta in casa</p>
+                            <p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
+                            <h3>Verdure Miste in Tempura <span class="price">4,9</span></h3>
+                            <p>Cipolle rosse, peperoni, melanzane e zucchine in tempura</p>
+                        </li>
+                        <!-- <li>
                             <h3>Cipolle Rosse <span class="price">4,9</span></h3>
                             <p>Cipolla rossa in tempura</p>
+                        </li> -->
+                        <li>
+                            <h3>Falafel <span class="price">5,5</span></h3>
+                            <p>Falafel di ceci, mais, cipolle e zucchine, Serviti con salsa tzatziki fatta in casa</p>
                         </li>
                         <li>
-                            <h3>Frittelline di Fagioli e Porri <span class="price">5,5</span></h3>
-                            <p>Servite con salsa alla senape fatta in casa</p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte <span class="price">4</span></h3>
+                            <h3>Patate Fritte <span class="price">4,5</span></h3>
                             <p>Patate fritte con buccia</p>
                         </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Per Stuzzicare - Spadellati e Grigliati</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
+                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
+                        </li>
+                        <li>
+                            <h3>Alette di Pollo <span class="price">5,5</span></h3>
+                            <p>Leggermente piccanti o piccanti</p>
+                        </li>
+                        <li>
+                            <h3>Arrosticini <span class="price">5,5</span></h3>
+                            <p>Arrosticini di pecora</p>
+                        </li>
+                        <li>
+                            <h3>Spiedini di Maiale e Pollo <span class="price">5,9</span></h3>
+                            <p>Spiedini di maiale, pollo e peperoni</p>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -153,12 +178,12 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Mini Burger e Patatine <span class="price">6,9</span></h3>
-                            <p>Manzo (100 grammi), cheddar, servito con patate fritte</p>
+                            <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Bocconcini e Patatine <span class="price">6,9</span></h3>
                             <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -255,14 +280,14 @@
                             <h3>Costine <span class="price">13,9</span></h3>
                             <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Tagliata di Picanha <span class="price">19</span></h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <h3>Cotoletta alla Milanese <span class="price">21</span></h3>
                             <p>Costoletta di vitello con osso impanata e cotta nel burro chiarificato. Servita con insalata e patatine</p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -275,10 +300,10 @@
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
@@ -287,14 +312,14 @@
                                 <h3>Blondie <span class="price">5</span></h3>
                                 <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout</p>
-                            </li>
-                            <li>
+                            </li> -->
+                            <!-- <li>
                                 <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
                                 <p>Cantucci artigianali serviti con vino di visciole</p>
-                            </li>
+                            </li> -->
                         </ul>
                         <br>
                     </div>
@@ -316,32 +341,30 @@
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Gambrinus Weisse</h3>
                             <p>Weisse 5,2%</p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Mahlzeit</h3>
                             <p>Altbier rossa 5,5% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-
-                        <li>
+                        <!-- <li>
                             <h3>Palmares</h3>
                             <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
-
-                        <!-- <li>
+                        </li> -->
+                        <li>
                             <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Citrano</h3>
                             <p>American Pale Ale 5% <br><em>Birrificio MC-77</em></p>
@@ -374,10 +397,10 @@
                             <h3>Yakima Trip</h3>
                             <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Breaking Hops</h3>
                             <p>Doppia IPA 7,2% <br><em>Birrificio MC-77</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
@@ -390,10 +413,10 @@
                     <h2 class="subheader">Birre artigianali in bottiglia</h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                            <li>
+                            <!-- <li>
                                 <h3>Pils 50cl <span class="price">6</span></h3>
                                 <p>Bionda tedesca pils 4,9% <br><em>Birrificio Gambrinus</em></p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Mupils 50cl <span class="price">6</span></h3>
                                 <p>Pils 5,2% <br><em>Birrificio Mukkeller</em></p>
@@ -593,12 +616,15 @@
                     <h2 class="subheader">Caffè</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Caffè <span class="price">1</span></h3>
+                            <h3>Caffè <span class="price">1,5</span></h3>
                             <p>Espresso, Deca</p>
                         </li>
                         <li>
-                            <h3>Caffè <span class="price">1,5</span></h3>
-                            <p>Corretto, Orzo, Macchiato</p>
+                            <h3>Caffè <span class="price">2</span></h3>
+                            <p>Corretto, Macchiato</p>
+                        </li>
+                        <li>
+                            <h3>Orzo <span class="price">1,5</span></h3>
                         </li>
                         <li>
                             <h3>Cappuccino <span class="price">3</span></h3>
