--- a/menu/index.html
+++ b/menu/index.html
@@ -131,7 +131,7 @@
                         </li>
                         <li>
                             <h3>Verdure Miste in Tempura <span class="price">4,9</span></h3>
-                            <p>Cipolle rosse, peperoni, melanzane e zucchine in tempura</p>
+                            <p>Cipolle rosse, peperoni, melanzane e zucchine</p>
                         </li>
                         <!-- <li>
                             <h3>Cipolle Rosse <span class="price">4,9</span></h3>
