--- a/menu/index.html
+++ b/menu/index.html
@@ -116,7 +116,7 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare - Fritti</h2>
 
-                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
                             <p>Serviti con salsa piccante</p>
