--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -139,7 +139,8 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Solo Asporto dal Venerdì alla Domenica <br>Dalle 19:00 alle 21:00</p>
+                                <p>Venerdì: solo asporto. Dalle 19:00 alle 21:00</p>
+<p>Sabato e Domenica: asporto con consumazione anche nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
                             </div>
                         </div>
                     </li>
