--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -138,8 +138,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Venerdì: solo asporto. Dalle 19:00 alle 21:00</p>
-<p>Sabato e Domenica: asporto con consumazione anche nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
+                                <p>Venerdì, Sabato e Domenica: asporto con consumazione anche nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
                             </div>
                         </div>
                     </li>
