--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
-				<p>Sabato e Domenica: prendi l'asporto e consumalo nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
+				<p>Venerdì, Sabato e Domenica: prendi l'asporto e consumalo nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
 				<!-- <h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p> -->
                 <!-- <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
@@ -137,8 +137,7 @@
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
-				<p>Venerdì Dalle 19:00 alle 21:00</p>
-				<p>Sabato e Domenica Dalle 18:00 alle 21:30</p>
+				<p>Venerdì, Sabato e Domenica: dalle 18:00 alle 21:30</p>
 				<!-- <p>Siamo chiusi per Pasqua (4 Aprile) e Pasquetta (5 Aprile)</p> -->
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
@@ -265,8 +264,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Venerdì: solo asporto. Dalle 19:00 alle 21:00</p>
-<p>Sabato e Domenica: asporto con consumazione anche nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
+								<p>Venerdì, Sabato e Domenica: asporto con consumazione anche nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
                             </div>
                         </div>
                     </li>
