--- a/eventi/san-martino.html
+++ b/eventi/san-martino.html
@@ -157,7 +157,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Venerdì, Sabato e Domenica: asporto con consumazione anche nei tavoli all'esterno. Dalle 18:00 alle 21:30</p>
+                                <p><strong>Venerdì, Sabato e Domenica</strong>: asporto con consumazione anche nei tavoli all'esterno. <br><strong>Dalle 18:00 alle 21:30</strong></p>
                             </div>
                         </div>
                     </li>
