--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
 				<p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 21:30</strong></p>
-				<p>Prendi l'asporto e consumalo nei tavoli all'esterno. Il servizio al tavolo comincerà a Giugno.</p>
+				<p>Prendi l'asporto e consumalo nei tavoli all'esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p>
+				<p>Il servizio al tavolo comincerà a Giugno.</p>
 				<!-- <h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p> -->
                 <!-- <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
