--- a/menu/cibo/new-york.html
+++ b/menu/cibo/new-york.html
@@ -130,8 +130,8 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Venerdì, Sabato e Domenica</strong>: asporto con consumazione anche nei tavoli all'esterno. <br><strong>Dalle 18:00 alle 21:30</strong></p>
-                            </div>
+								<p><strong>Venerdì, Sabato e Domenica</strong>: asporto con consumazione anche ai tavoli in esterno. <br><strong>Dalle 18:00 alle 21:30</strong></p>
+							</div>
                         </div>
                     </li>
 		  			<li>
