--- a/menu/index.html
+++ b/menu/index.html
@@ -573,7 +573,7 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per i Dessert</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-			<li>
+                        <li>
                             <h3>Nero Visciola <span class="price">19 / 3,5</span></h3>
                             <p>Antinori</p>
                         </li>
@@ -745,8 +745,8 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Venerdì, Sabato e Domenica</strong>: asporto con consumazione anche nei tavoli all'esterno. <br><strong>Dalle 18:00 alle 21:30</strong></p>
-                            </div>
+								<p><strong>Venerdì, Sabato e Domenica</strong>: asporto con consumazione anche ai tavoli in esterno. <br><strong>Dalle 18:00 alle 21:30</strong></p>
+							</div>
                         </div>
                     </li>
 		  			<li>
