--- a/asporto/index.html
+++ b/asporto/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Dal Venerdì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>21:00</strong></p>
+                <p><strong>Dal Venerdì alla Domenica</strong>.<br>Dalle <strong>18:00</strong> alle <strong>21:30</strong></p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
@@ -114,18 +114,15 @@
     </div>
     <div class="tabs-content" id="menupage-text">
 <!-- cena -->
-        <section>
+        <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare</h2>
+                    <h2 class="subheader">Per Stuzzicare - Fritti</h2>
+
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
                             <p>Serviti con salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
-                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
                             <h3>Olive all'Ascolana <span class="price">5,5</span></h3>
@@ -133,20 +130,48 @@
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte <span class="price">5,9</span></h3>
-                            <p>Servite con salsa aioli fatta in casa</p>
+                            <p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
+                            <h3>Verdure Miste in Tempura <span class="price">4,9</span></h3>
+                            <p>Cipolle rosse, peperoni, melanzane e zucchine</p>
+                        </li>
+                        <!-- <li>
                             <h3>Cipolle Rosse <span class="price">4,9</span></h3>
                             <p>Cipolla rossa in tempura</p>
+                        </li> -->
+                        <li>
+                            <h3>Falafel <span class="price">5,5</span></h3>
+                            <p>Falafel di ceci, mais, cipolle e zucchine, Serviti con salsa tzatziki fatta in casa</p>
                         </li>
                         <li>
-                            <h3>Frittelline di Fagioli e Porri <span class="price">5,5</span></h3>
-                            <p>Servite con salsa alla senape fatta in casa</p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte <span class="price">4</span></h3>
+                            <h3>Patate Fritte <span class="price">4,5</span></h3>
                             <p>Patate fritte con buccia</p>
                         </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Per Stuzzicare - Spadellati e Grigliati</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
+                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
+                        </li>
+                        <li>
+                            <h3>Alette di Pollo <span class="price">5,5</span></h3>
+                            <p>Leggermente piccanti o piccanti</p>
+                        </li>
+                        <li>
+                            <h3>Arrosticini <span class="price">5,5</span></h3>
+                            <p>Arrosticini di pecora</p>
+                        </li>
+                        <li>
+                            <h3>Spiedini di Maiale e Pollo <span class="price">5,9</span></h3>
+                            <p>Spiedini di maiale, pollo e peperoni</p>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -156,12 +181,12 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Mini Burger e Patatine <span class="price">6,9</span></h3>
-                            <p>Manzo (100 grammi), cheddar, servito con patate fritte</p>
+                            <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Bocconcini e Patatine <span class="price">6,9</span></h3>
                             <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -252,28 +277,28 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Carni <br></h2>
+                    <h2 class="subheader">Carni</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine <span class="price">13,9</span></h3>
                             <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Tagliata di Picanha <span class="price">19</span></h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <h3>Cotoletta alla Milanese <span class="price">21</span></h3>
                             <p>Costoletta di vitello con osso impanata e cotta nel burro chiarificato. Servita con insalata e patatine</p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
             <div class="row">
-                 <div class="large-12 medium-12 small-12 columns">
-                   <!-- <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                     <div class="title-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3"> -->
+                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                             <!-- <li>
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
@@ -282,28 +307,31 @@
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
-                            </li> -->
+                            </li>
+                            <li>
+                                <h3>Blondie <span class="price">5</span></h3>
+                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
+                            </li>
                             <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout</p>
                             </li> -->
                             <!-- <li>
-                                <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
+                                <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
+                                <p>Cantucci artigianali serviti con vino di visciole</p>
                             </li> -->
-                        <!-- </ul>
+                        </ul>
                         <br>
-                    </div> -->
+                    </div>
                     <div class="title-divider">
                         <p class="">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br><br>I prodotti contengono allergeni: chiedi al personale.</p>
                         <br>
                     </div>
                 </div>
             </div>
-<!-- cena fine -->
         </section>
 <!-- call to action inizio -->
         <div class="row">
