--- a/menu/index.html
+++ b/menu/index.html
@@ -421,6 +421,10 @@
                                 <h3>Mupils 50cl <span class="price">6</span></h3>
                                 <p>Pils 5,2% <br><em>Birrificio Mukkeller</em></p>
                             </li>
+                            <li>
+                                <h3>Bibere Lattina 33cl <span class="price">5</span></h3>
+                                <p>Kellers Pils 4,5% <br><em>Birrificio dei Castelli</em></p>
+                            </li>
                             <!-- <li>
                                 <h3>Rosenheimer Marzen 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca 5,6% <br><em>Birrificio Flotzinger</em></p>
@@ -446,17 +450,13 @@
                                 <p>Rossa tedesca 8,2% <br><em>Birrificio Mullerbrau</em></p>
                             </li> -->
                             <li>
-                                <h3>Dopplebock 50cl <span class="price">6</span></h3>
-                                <p>Rossa tedesca 7,2% <br><em>Birrificio Hirsch</em></p>
+                                <h3>Effecto Placebo Lattina 33cl <span class="price">5</span></h3>
+                                <p> Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
                             </li>
                             <li>
-                                <h3>Spezial Dunkel 50cl <span class="price">6</span></h3>
-                                <p>Rossa tedesca 5,3% <br><em>Birrificio Flotzinger</em></p>
+                                <h3>Brevis Furor Lattina 33cl <span class="price">5</span></h3>
+                                <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                             </li>
-                            <!-- <li>
-                                <h3>Antonator 50cl <span class="price">6</span></h3>
-                                <p>Rossa corposa tedesca 7% <br><em>Birrificio Mariahilfer</em></p>
-                            </li> -->
                             <!-- <li>
                                 <h3>Zwickel 50cl <span class="price">6</span></h3>
                                 <p>Bionda tedesca non filtrata 4,9% <br><em>Birrificio Gambrinus</em></p>
@@ -477,13 +477,29 @@
                                 <h3>Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
-                           <li>
+                            <li>
+                                <h3>Extrema Ratio Lattina 33cl <span class="price">5</span></h3>
+                                <p>Doppia IPA 7,4% <br><em>irrificio dei Castelli</em></p>
+                            </li>
+                            <li>
                                 <h3>Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
                             </li>
                             <li>
                                 <h3>Nessuna Speranza 50cl <span class="price">6</span></h3>
                                 <p>Belgian IPA 7,5% <br><em>Birrificio Mukkeller</em></p>
+                            </li>
+                            <li>
+                                <h3>Dopplebock 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 7,2% <br><em>Birrificio Hirsch</em></p>
+                            </li>
+                            <li>
+                                <h3>Antonator 50cl <span class="price">6</span></h3>
+                                <p>Rossa corposa tedesca 7% <br><em>Birrificio Mariahilfer</em></p>
+                            </li>
+                            <li>
+                                <h3>Spezial Dunkel 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 5,3% <br><em>Birrificio Flotzinger</em></p>
                             </li>
                             <!-- <li>
                                 <h3>Schwarze Madonna 50cl <span class="price">6</span></h3>
@@ -529,11 +545,11 @@
                     <h2 class="subheader">Vino Bottiglia / Calice</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Cervidoni DOC <span class="price">11,5 / 3</span></h3>
+                            <h3>Cervidoni DOC <span class="price">12,5 / 3</span></h3>
                             <p>Rosso Piceno <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
-                            <h3>Barbarossa DOC <span class="price">12,5 / 3</span></h3>
+                            <h3>Barbarossa DOC <span class="price">13,5 / 3</span></h3>
                             <p>Lacrima di Morro D'Alba <br><em>Cantina di Tavignano</em></p>
                         </li>
 			    <!--
@@ -543,7 +559,7 @@
                         </li>
 -->
                         <li>
-                            <h3>Villa Torre DOC <span class="price">12,5 / 3</span></h3>
+                            <h3>Villa Torre DOC <span class="price">13,5 / 3</span></h3>
                             <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
