update menu vino

--- a/menu/index.html
+++ b/menu/index.html
@@ -571,7 +571,7 @@
                             <p><em>Cantina H.Lun</em></p>
                         </li>
                         <li>
-                            <h3>Ribolla Gialla <span class="price">18 / 4</span></h3>
+                            <h3>Ribolla Gialla IGT<span class="price">18 / 4</span></h3>
                             <p><em>Cantina Branko</em></p>
                         </li>
                         <li>
