--- a/asporto/index.html
+++ b/asporto/index.html
@@ -142,7 +142,7 @@
                         </li> -->
                         <li>
                             <h3>Falafel <span class="price">5,5</span></h3>
-                            <p>Falafel di ceci, mais, cipolle e zucchine, Serviti con salsa tzatziki fatta in casa</p>
+                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa</p>
                         </li>
                         <li>
                             <h3>Patate Fritte <span class="price">4,5</span></h3>
