--- a/menu/index.html
+++ b/menu/index.html
@@ -365,6 +365,10 @@
                             <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
                         </li>
+                        <li>
+                            <h3>Thee Bitter</h3>
+                            <p>Ambrata stile bitter inglese 4,2% <br><em>Birrificio Resina</em></p>
+                        </li>
                         <!-- <li>
                             <h3>Citrano</h3>
                             <p>American Pale Ale 5% <br><em>Birrificio MC-77</em></p>
@@ -640,8 +644,12 @@
                             <p>33cl / Litro</p>
                         </li>
                         <li>
-                            <h3>Aranciata <span class="price">3</span></h3>
-                            <p>Passarelli 27cl</p>
+                            <h3>Coca Cola Zero<span class="price">3</span></h3>
+                            <p>33cl</p>
+                        </li>
+                        <li>
+                            <h3>Fanta<span class="price">3</span></h3>
+                            <p>33cl</p>
                         </li>
                         <!-- <li>
                             <h3>Succo di Mela <span class="price">3</span></h3>
