--- a/menu/index.html
+++ b/menu/index.html
@@ -583,7 +583,7 @@
                             <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
-                            <h3>Prosecco DOCG <span class="price">15 / 3,5</span></h3>
+                            <h3>Prosecco Treser DOCG <span class="price">15 / 3,5</span></h3>
                             <p><em>Cantina Serre di Pederiva</em></p>
                         </li>
                         <!-- <li>
