--- a/menu/index.html
+++ b/menu/index.html
@@ -692,7 +692,7 @@
                     <h2 class="subheader">Amari</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Varnelli, Sibilla, Tonico <span class="price">3</span></h3>
+                            <h3>Varnelli, Sibilla, Tonico, Moka <span class="price">3,5</span></h3>
                         </li>
                         <li>
                             <h3>Anisetta Meletti <span class="price">3</span></h3>
