--- a/menu/index.html
+++ b/menu/index.html
@@ -300,10 +300,10 @@
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
@@ -367,7 +367,7 @@
                         </li>
                         <li>
                             <h3>Thee Bitter</h3>
-                            <p>Bitter inglese ambrata 4,2% <br><em>Birrificio Resina</em></p>
+                            <p>Bitter ale ambrata 4,2% <br><em>Birrificio Resina</em></p>
                         </li>
                         <!-- <li>
                             <h3>Citrano</h3>
