update descrizione hamb vegetariani

--- a/menu/index.html
+++ b/menu/index.html
@@ -259,7 +259,7 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger Vegetariani<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
+                    <h2 class="subheader">Hamburger Vegetariani<br><small>Serviti con patate fritte</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli <span class="price">9,5</span></h3>
