--- a/menu/index.html
+++ b/menu/index.html
@@ -564,6 +564,10 @@
                             <h3>Villa Torre DOC <span class="price">13,5 / 3</span></h3>
                             <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li>
+                        <!-- <li>
+                            <h3>Costa Verde DOC<span class="price">12,5 / 3</span></h3>
+                            <p>Verdicchio dei Castelli di Jesi Classico <br><em>Cantina di Tavignano</em></p>
+                        </li> -->
                         <li>
                             <h3>Misco Superiore DOC <span class="price">18</span></h3>
                             <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
