--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 large-6 columns">
-				<h2>Ristorante</h2>
-				<p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p>
-				<p>Prendi l'asporto e consumalo ai tavoli in esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p>
+				<h2>Ristorante <small>(Prenotazione obbligatoria)</h2>
+				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
+				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
+				<!-- <p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p> -->
+				<!-- <p>Prendi l'asporto e consumalo ai tavoli in esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p> -->
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
@@ -142,7 +144,8 @@
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
-				<p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p>
+				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
+				<!-- <p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p> -->
 				<!-- <p>Venerdì, Sabato e Domenica: dalle 18:00 alle 21:30</p> -->
 				<!-- <p>Siamo chiusi per Pasqua (4 Aprile) e Pasquetta (5 Aprile)</p> -->
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
@@ -269,9 +272,7 @@
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
                        		<div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
-                                <br><strong>Dalle 18:00 alle 22:30</strong></p>
-                                <p>Dal 1 Giugno aperti tutti i giorni dalle 19 alle 23</p>
+                                <p><strong>Aperto tutti i giorni, solo all'esterno</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
                  	</li>
