--- a/asporto/index.html
+++ b/asporto/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Dal Venerdì alla Domenica</strong><br>Dalle <strong>18:00</strong> alle <strong>22:30</strong></p>
+                <p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
@@ -360,9 +360,7 @@
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
                        		<div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
-                                <br><strong>Dalle 18:00 alle 22:30</strong></p>
-                                <p>Dal 1 Giugno aperti tutti i giorni dalle 19 alle 23</p>
+                                <p><strong>Aperto tutti i giorni, solo all'esterno</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
                  	</li>
