--- a/menu/index.html
+++ b/menu/index.html
@@ -226,14 +226,14 @@
                             <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate</p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>Primavera <span class="price">9,5 / doppio 14,9</span></h3>
                             <p>Manzo, composta di feta, pomodorini e timo; insalata riccia</p>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit</p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, guanciale, pepe</p>
@@ -242,18 +242,18 @@
                             <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante</p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Carbonara <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Greco <span class="price">9,5 / doppio 14,9</span></h3>
                             <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -280,10 +280,10 @@
                             <h3>Costine <span class="price">13,9</span></h3>
                             <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Tagliata di Picanha <span class="price">19</span></h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Cotoletta alla Milanese <span class="price">21</span></h3>
                             <p>Costoletta di vitello con osso impanata e cotta nel burro chiarificato. Servita con insalata e patatine</p>
@@ -296,10 +296,10 @@
                     <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                            <!-- <li>
+                            <li>
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
@@ -310,8 +310,7 @@
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole.</p>
-                                <!-- Servito con mousse di crema chantilly -->
+                                <p>Brownie con nocciole. Servito con mousse di crema chantilly</p>
                             </li>
                             <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
@@ -798,9 +797,7 @@
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
                        		<div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
-                                <br><strong>Dalle 18:00 alle 22:30</strong></p>
-                                <p>Dal 1 Giugno aperti tutti i giorni dalle 19 alle 23</p>
+                                <p><strong>Aperto tutti i giorni, solo all'esterno</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
                  	</li>
