--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 		</div>
 	</div>
 	<div class="panel-home-n">
-		<div class="row">
+		<!-- <div class="row">
 			<div class="medium-12 large-12 columns panel clearfix">
 				<h1>Chiusura festività</h1>
 				<p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 3, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
@@ -123,11 +123,9 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 large-6 columns">
-				<h2>Ristorante <small>(Prenotazione obbligatoria)</h2>
+				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
-				<!-- <p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p> -->
-				<!-- <p>Prendi l'asporto e consumalo ai tavoli in esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p> -->
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
