--- a/social/index.html
+++ b/social/index.html
@@ -98,7 +98,7 @@
 		  			<li>
 						<h4 class="subheader">Prenota</h4>
 						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi prenotazione</a></p>
+						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
 					</li>
 		  			<li>
                        	<h4 class="subheader">Orari</h4>
