--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
 <!-- Alert popup -->
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
     $("document").ready( function () {
         alert("Oggi chiusi per pioggia");
     });
-</script> -->
+</script>
 
 <!-- End Alert popup -->
 
