--- a/menu/index.html
+++ b/menu/index.html
@@ -349,18 +349,18 @@
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Palmares</h3>
                             <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
-                        </li> -->
+                        </li>
                        <!-- <li>
                             <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>Thee Bitter</h3>
                             <p>Bitter ale ambrata 4,2% <br><em>Birrificio Resina</em></p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Effecto Placebo</h3>
                             <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
@@ -393,11 +393,15 @@
                             <h3>Yakima Trip</h3>
                             <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
                         </li> -->
+                        <!-- <li>
+                            <h3>Extrema Ratio</h3>
+                            <p>Doppia IPA 7,4% <br><em>Birrificio dei Castelli</em></p>
+                        </li> -->
                        <!-- <li>
                             <h3>Breaking Hops</h3>
                             <p>Doppia IPA 7,2% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                   <!--     <li>
+                        <!-- <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
                         </li> -->
@@ -449,10 +453,10 @@
                                 <h3>Bockser 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 8,2% <br><em>Birrificio Mullerbrau</em></p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Effecto Placebo Lattina 33cl <span class="price">5</span></h3>
                                 <p> Session IPA 4% <br><em>Birrificio dei Castelli</em></p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Brevis Furor Lattina 33cl <span class="price">5</span></h3>
                                 <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
