--- a/menu/index.html
+++ b/menu/index.html
@@ -369,10 +369,10 @@
                             <h3>Mirabilia</h3>
                             <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                        <li>
+                     <!--   <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
+                        </li> -->
 		                <!-- <li>
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
@@ -401,6 +401,10 @@
                             <h3>Breaking Hops</h3>
                             <p>Doppia IPA 7,2% <br><em>Birrificio MC-77</em></p>
                         </li> -->
+<li>
+                            <h3>Marina</h3>
+                            <p>IPA Ambrata 6,2% <br><em>Birrificio Mukkeller</em></p>
+			    </li>
                         <!-- <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
